# resigrid01

./: .gitignore  CPE_586_Final_Project_IslamMdSaiful.ipynb  Cargo.toml  README.md  pyproject.toml
Scripts/: HW02Q7_binaryclassification_animate.sh  acc_classifier_impl.py  acc_model.onnx  acc_model.onnx.data  binary_classh.sh  binaryclassification_animate_impl.py  binaryclassification_impl.py  genmodel_impl.py  genmodel_impl.sh  genmodel_inference.py  hw02q7_background.sh  imagenet_impl.py  imagenet_impl.sh  imagenet_inference.py  multiclass_eval.py  multiclass_impl.py  multiclass_impl.sh  run_genmodels.sh  training_log.out
outputs/gen_eval/: comparison_metrics.json  diffusion_metrics.json  gan_metrics.json  vae_metrics.json
outputs/gen_eval_1000/: comparison_metrics.json  comparison_metrics_2026-04-17_17-57-27.json  diffusion_metrics.json  diffusion_metrics_2026-04-17_17-57-27.json  gan_metrics.json  gan_metrics_2026-04-17_17-57-27.json  vae_metrics.json  vae_metrics_2026-04-17_17-57-27.json
outputs/metrics/: metrics_hw02_20260406_151015.csv
outputs/plots/: aggregate_hw02_20260406_151518.csv
src/: lib.rs
src/mypythonpackage/: __init__.py
src/mypythonpackage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mypythonpackage/animation/: __init__.py
src/mypythonpackage/deepl/: __init__.py  _init__.py  acc_classifier.py  gen_model.py  multiclass.py  multiclass_hw03.py  two_layer_binary_classification.py
src/mypythonpackage/distributions/: __init__.py  cvdistributions.py
src/scripts/: binaryclassification_impl.py
(+11 files in other folders)
