[project]
name = "mypythonpackage"
version = "0.2.0"
description = " CPE 586 and CPE 587"
readme = "README.md"
authors = [
    { name = "resigridgh", email = "resigrid16@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"
